syntax = "proto3";

package forest.v1;

message BeginUploadArtifactRequest {}
message BeginUploadArtifactResponse {
  string upload_id = 1;
}

message UploadArtifactRequest {
  string upload_id  = 1;

  string env = 2;
  string destination = 3;

  string file_name = 4;
  string file_content = 5;
}
message UploadArtifactResponse {}

message CommitArtifactRequest{
  string upload_id = 1;
}
message CommitArtifactResponse {
  string artifact_id = 1;
}



service ArtifactService {
  rpc BeginUploadArtifact(BeginUploadArtifactRequest) returns (BeginUploadArtifactResponse);
  rpc UploadArtifact(stream UploadArtifactRequest) returns (UploadArtifactResponse);
  rpc CommitArtifact(CommitArtifactRequest) returns (CommitArtifactResponse);
}
