syntax = "proto3";

package non.v1;

service NamespaceService {
  rpc Create(CreateRequest) returns (CreateResponse) {}
}

message CreateRequest {
  string namespace = 1;
}
message CreateResponse {}
